<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation.xml"
  app:startDestination="@+id/nav_home">

  <fragment
    android:id="@+id/nav_home"
    android:name="me.testcase.ognarviewer.ui.home.HomeFragment"
    android:label="@string/app_name"
    tools:layout="@layout/fragment_home">
    <action
      android:id="@+id/edit_action"
      app:destination="@+id/nav_edit" />
  </fragment>

  <fragment
    android:id="@+id/nav_directory"
    android:name="me.testcase.ognarviewer.ui.directory.DirectoryFragment"
    android:label="@string/directory"
    tools:layout="@layout/fragment_directory">
    <action
      android:id="@+id/edit_action"
      app:destination="@+id/nav_edit" />
  </fragment>

  <fragment
    android:id="@+id/nav_settings"
    android:name="me.testcase.ognarviewer.ui.settings.SettingsFragment"
    android:label="@string/settings">
    <action
      android:id="@+id/foobar"
      app:destination="@id/nav_debug" />
  </fragment>

  <fragment
    android:id="@+id/nav_debug"
    android:name="me.testcase.ognarviewer.ui.settings.DebugFragment"
    android:label="@string/debug" />

  <fragment
    android:id="@+id/nav_about"
    android:name="me.testcase.ognarviewer.ui.about.AboutFragment"
    android:label="@string/about"
    tools:layout="@layout/fragment_about" />

  <fragment
    android:id="@+id/nav_edit"
    android:name="me.testcase.ognarviewer.ui.directory.EditFragment"
    android:label="@string/edit"
    tools:layout="@layout/fragment_edit">
    <argument
      android:name="id"
      app:argType="long" />
  </fragment>

</navigation>
