<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:clickable="true">

  <me.testcase.ognarviewer.ui.home.AutoCalibrationView
    android:id="@+id/compass_animation"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@id/calibration_title"
    app:layout_constraintTop_toTopOf="parent" />

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="@id/calibration_title" />

  <TextView
    android:id="@+id/calibration_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/calibration_title"
    android:textAppearance="?textAppearanceHeadline5"
    android:textColor="@color/black"
    app:layout_constraintBottom_toTopOf="@id/calibration_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/calibration_description"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/calibration_description"
    android:textAlignment="center"
    android:textAppearance="?textAppearanceBody1"
    android:textColor="@color/black"
    app:layout_constraintBottom_toTopOf="@id/current_accuracy"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/current_accuracy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:textAppearance="?textAppearanceCaption"
    android:textColor="#666666"
    app:layout_constraintBottom_toTopOf="@id/skip_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:text="Current accuracy: low" />

  <Button
    android:id="@+id/skip_button"
    style="@style/Widget.Material3.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/skip"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
